--- a/abac-core/Cargo.toml
+++ b/abac-core/Cargo.toml
@@ -8,7 +8,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde-value = "0.7.0"
 thiserror = "2.0.12"
 
-derive = { path = "../derive" }
+macros = { path = "../macros" }
 
 [dev-dependencies]
 serde_json = "1.0.140"
