--- a/abac-core/Cargo.toml
+++ b/abac-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 serde = { version = "1.0.219", features = ["derive"] }
 serde-value = "0.7.0"
 thiserror = "2.0.12"
+uuid = "1.17.0"
 
 macros = { path = "../macros" }
 
